package com.progra.vehicle;

public class Bicycle extends VehicleWithOutEngine{
    public Bicycle() {
        System.out.println("Bicycle");
    }
}
