package com.progra.vehicle;

public class Motorcycle extends VehicleWithEngine{
    public Motorcycle() {
        System.out.println("Motorcycle");
    }
}
