package com.progra.vehicle;

public class Scooter extends VehicleWithOutEngine{
    public Scooter() {
        System.out.println("Scooter");
    }
}
