package com.progra.vehicle;

public class Truck extends VehicleWithEngine{
    public Truck() {
        System.out.println("Truck");
    }
}
