package com.progra.vehicle;

public class Vehicle {
    public Vehicle(){
        System.out.println("Vehicle");
    }
}
