package com.progra.vehicle;

public class VehicleWithEngine extends Vehicle{
    public VehicleWithEngine() {
        System.out.println("VehicleWithEngine");
    }
}
