package com.progra.vehicle;

public class VehicleWithOutEngine extends Vehicle{
    public VehicleWithOutEngine() {
        System.out.println("VehicleWithOutEngine");
    }
}
